--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,7 @@ html{
     display: flex;
     /* flex-direction: row; */
     align-items: center;
+    justify-content: space-between;
     position: sticky;
     top: 0%;
     z-index: 1;
@@ -38,9 +39,13 @@ html{
     }
 
 /* Navigation bar: list styling */
+#navbar button{
+    display: none;
+}
 #navbar ul{
     display: flex;
     font-family: 'Righteous', cursive;
+    
 }
     #navbar ul li{
         list-style: none;
