--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="screen and (max-width:1044px )" href="css//phone.css">
+    <link rel="stylesheet" media="screen and (max-width:450px )" href="css//menu.css">
 
 </head>
 
@@ -24,6 +25,7 @@
             <li class="item"><a href="#contact">Contact</a></li>
 
         </ul>
+        <button>MENU</button>
     </nav>
 
     <section id="home">
