--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="screen and (max-width:1044px )" href="css//phone.css">
-    <link rel="stylesheet" media="screen and (max-width:450px )" href="css//menu.css">
+    {{!-- <link rel="stylesheet" media="screen and (max-width:450px )" href="css//menu.css"> --}}
 
 </head>
 
